refactor: Simplify FHIRPath evaluation interface
Introduce a new evaluation API that separates column-based evaluation from
dataset-aware operations:

- Add SingleResourceEvaluator for Column-only FHIRPath evaluation without
  DataSource dependencies
- Add DatasetEvaluator that pairs SingleResourceEvaluator with a Dataset
- Introduce ResourceResolver interface with FhirResourceResolver (record) and
  DefinitionResourceResolver implementations
- Add CrossResourceStrategy enum for configurable cross-resource reference
  handling (FAIL or EMPTY)
- Add ResourceRepresentation and EmptyRepresentation for flexible column
  schema handling
- Consolidate SearchColumnBuilder from ResourceFilter/ResourceFilterFactory
- Remove legacy execution classes (FhirPathEvaluator, FhirPathExecutor,
  ColumnOnlyResolver, etc.)

The new API reduces coupling, enables filter expression building without
SparkSession, and provides clearer separation of concerns.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>